--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,30 @@
 {
-  "name": "hexlet/code",
-  "description": "Hexlet php project2",
-  "type": "project",
-  "license": "MIT",
-  "scripts": {
-    "test": "phpunit tests"
-  },
-  "authors": [
-    {
-      "name": "nikki35944",
-      "email": "95740936+nikki35944@users.noreply.github.com"
-    }
-  ],
-  "bin": [
-    "bin/gendiff"
-  ],
-  "autoload": {
-    "files": [
-      "src/Differ.php",
-      "src/Parser.php",
-      "src/BuildAstTree.php",
-      "src/Formatters.php",
-      "src/Formatters/Stylish.php",
-      "src/Formatters/Plain.php",
-      "src/Formatters/Json.php",
-      "src/GetData.php"
+    "name": "hexlet/code",
+    "description": "second project",
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "Hexlet\\Code\\": "src/"
+        },
+        "files": [
+            "src/Differ.php",
+            "src/Parsers.php",
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters.php",
+            "src/Formatters/Json.php"
+        ]
+    },
+    "require": {
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^5.3"
+    },
+    "bin": [
+        "bin/gendiff"
     ],
-    "psr-4": {
-      "Differ\\Tests\\": "tests"
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "squizlabs/php_codesniffer": "3.7.0"
     }
-  },
-  "require": {
-    "docopt/docopt": "^1.0",
-    "symfony/yaml": "^5.1",
-    "funct/funct": "^1.5"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.4",
-    "psy/psysh": "@stable",
-    "symfony/var-dumper": "^4.0",
-    "squizlabs/php_codesniffer": "^3.5.5"
-  }
 }
